--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,21 +1,38 @@
 /* Estilos para las tarjetas tipo Post-it */
 
-
 .postit-card {
     background-color: #fff8b3; /* Color tipo post-it amarillo suave */
-    border: 1px solid #f1f1f1;
+    border: 2px solid transparent;
     border-radius: 15px;
     box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.2);
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    transition: transform 0.6s ease, box-shadow 0.2s ease;
     height: 250px;
     width: 100%;
     overflow: hidden;
     padding: 15px;
+    min-height:250px;
+    perspective: 1000px;
+    position: relative;
   }
+   .posit-card.selected{
+    border: 2px solid #0d6efd;
+    box-shadow: 0 0 10px rgba(13, 110, 253, 0.5);
+    transform: scale(1.02);
+  } 
+  .seleccionado {
+    border: 3px solid #007bff; /* azul Bootstrap */
+    box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
+    transform: scale(1.03);
+    transition: all 0.2s ease-in-out;
+  }
+  
   
   .postit-card:hover {
     transform: scale(1.03);
     box-shadow: 4px 8px 12px rgba(0, 0, 0, 0.3);
+  }
+  .postit-card:hover .card-inner {
+    transform: rotateY(180deg);
   }
   
   .postit-card.border-primary {
@@ -32,4 +49,57 @@
     font-size: 0.9rem;
     color: #555;
   }
+  /*Estilo para que los posits se den la vuelta para ver ejercicios*/
+  .card-flip {
+    perspective: 1000px;
+    position: relative;
+    height: 100%;
+  }
+  
+  .card-inner {
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+    height: 100%;
+    width: 100%;
+  }
+  
+  .card-flip:hover .card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .card-front, .card-back {
+    backface-visibility: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+    border-radius: 1rem;
+    display:flex;
+    flex-direction: colum;
+    justify-content: space-between;
+  }
+  
+  .card-front {
+    z-index: 2;
+    transform: rotateY(odeg);
+  }
+  
+  .card-back {
+    transform: rotateY(180deg);
+    background-color: #fff;
+    overflow-y: auto;
+    z-index: 1;
+  }
+  .card-title, .card-text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    display: -webkit-box; 
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+  }
+  
+  
+
   
